# canon_collision

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  appveyor.yml  compiling.md  readme.md  ssh-keys-appveyor.zip.enc  ssh-keys-travis.tar.enc  travis.sh
assets_raw/models/: compile_assets.sh  export.py  export_all_assets.py
assets_raw/models/BeatMesa/: BeatMesa.blend
assets_raw/models/PerfectlyGenericObject/: PerfectlyGenericObject.blend
assets_raw/models/PerfectlyGenericProjectile/: PerfectlyGenericProjectile.blend
assets_raw/models/Ruins/: Ruins.blend
assets_raw/models/Toriel/: Toriel.blend
assets_raw/models/TorielButterscotchCinnamonPie/: TorielButterscotchCinnamonPie.blend
assets_raw/models/TorielFireball/: TorielFireball.blend
assets_raw/models/TorielOven/: TorielOven.blend
assets_raw/models/Waterfall/: Waterfall.blend
canon_collision/: Cargo.toml
canon_collision/src/: ai.rs  app.rs  assets.rs  audio.rs  body.rs  camera.rs  cli.rs  collision.rs  entity.rs  game.rs  graphics.rs  input.rs  item.rs  location.rs  main.rs  menu.rs  particle.rs  player.rs  projectile.rs  replays.rs  results.rs  rules.rs  simple_projectile.rs
canon_collision/src/audio/: mod.rs  sfx.rs
canon_collision/src/collision/: collision_box.rs  item_grab.rs  mod.rs
canon_collision/src/entity/: item.rs  mod.rs  player.rs  projectile.rs  toriel_fireball.rs  toriel_oven.rs
canon_collision/src/entity/components/: action_state.rs  body.rs  mod.rs
canon_collision/src/entity/fighters/: mod.rs  player.rs  toriel.rs
canon_collision/src/shaders/: color-fragment.glsl  color-vertex.glsl  color.wgsl  hitbox-fragment.glsl  hitbox-vertex.glsl  hitbox.wgsl  model3d-animated-vertex.glsl  model3d-fireball-vertex.glsl  model3d-fragment.glsl  model3d-lava-fragment.glsl  model3d-standard-fragment.glsl  model3d-static-vertex.glsl  model3d-vertex.glsl  model3d.wgsl
canon_collision/src/wgpu/: animation.rs  buffers.rs  mod.rs  model3d.rs
canon_collision_hot_reload/: Cargo.toml
canon_collision_hot_reload/src/: main.rs
canon_collision_lib/: Cargo.toml
canon_collision_lib/src/: assets.rs  command_line.rs  config.rs  entity_def.rs  fighter.rs  files.rs  geometry.rs  lib.rs  logger.rs  network.rs  package.rs  panic_handler.rs  replays_files.rs  rules.rs  stage.rs
canon_collision_lib/src/entity_def/: dave.rs  item.rs  mod.rs  player.rs  projectile.rs  toriel.rs  toriel_fireball.rs  toriel_oven.rs
canon_collision_lib/src/input/: filter.rs  gcadapter.rs  generic.rs  maps.rs  mod.rs  state.rs
canon_collision_lib/tests/: unittest_input.rs
cc_cli/: Cargo.toml
cc_cli/src/: main.rs
generate_hurtboxes/: Cargo.toml
generate_hurtboxes/src/: animation.rs  cli.rs  hurtbox.rs  main.rs  model.rs
map_controllers/: Cargo.toml  build.rs
map_controllers/src/: main.rs  state.rs
package/: package_meta.cbor  rules.cbor
package/Entities/: PerfectlyGenericObject.cbor  PerfectlyGenericProjectile.cbor  Toriel.cbor  TorielButterscotchCinnamonPie.cbor  TorielFireball.cbor  TorielOven.cbor
package/Fighters/: Foo.cbor  PerfectlyGenericObject.cbor  Toriel.cbor  base_fighter.cbor
package/Stages/: BeatMesa.cbor  Ruins.cbor  Waterfall.cbor  base_stage.cbor
package_upgrader/: Cargo.toml
package_upgrader/src/: main.rs
panic_handler/: Cargo.toml
panic_handler/src/: main.rs
runtime_state_upgrader/: Cargo.toml
runtime_state_upgrader/src/: main.rs
