[package]
name = "canon_collision"
version = "0.0.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = ""
license = "GPL-3.0"
repository = "https://github.com/rukai/canon_collision"
keywords = ["platform", "fighter", "game"]
categories = ["games", "game-engines"]
default-run = "canon_collision"
edition = "2018"

[dependencies]
canon_collision_lib = { path = "../canon_collision_lib" }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.20"
strum_macros = "0.20"
getopts = "0.2"
log = "0.4"
lyon = "0.17"
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
slotmap = { version = "1", features = ["serde"] }
treeflection = "0.1"
treeflection_derive = "0.4"
winit = "0.24" # Needed on all builds, game logic is dependent on VirtualKeyCode struct
winit_input_helper = "0.9"
gltf = "0.15"
png-decoder = { git = "https://github.com/mpizenberg/png-decoder" }
cgmath = { version = "0.18" }
futures = "0.3"
bytemuck = { version = "1", features = ["derive"] }
vk-shader-macros = { version = "0.2", optional = true }
#wgpu_glyph = { version = "0.11", optional = true }
wgpu_glyph = { git = "https://github.com/hecrj/wgpu_glyph", optional = true }
wgpu = { version = "0.7.0", optional = true }
raw-window-handle = "0.3"
spin_sleep = "1"
kira = "0.4"
audiotags = "0.2"

[features]
default = ["wgpu_renderer"]
wgpu_renderer = ["wgpu", "wgpu_glyph", "vk-shader-macros"]
