[package]
name = "canon_collision_hot_reload"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canon_collision_lib = { path = "../canon_collision_lib" }
hotwatch = "0.4" # TODO: I could probably pretty easily replace this with notify, the hotwatch wrapper isnt really giving me much.
