[package]
name = "cc_cli"
edition = "2021"
rust-version = "1.56"
version = "0.0.1"
authors = ["Rukai <rubickent@gmail.com>"]
description = "CLI client for Canon Collision"
license = "MIT"
repository = "https://github.com/rukai/pf_sandbox"
keywords = ["canon", "collision", "CLI", "command", "client"]

[dependencies]
