[package]
name = "cc_map_controllers"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.9"
gdk = "0.13"
gilrs-core = "0.2"
canon_collision_lib = { path = "../canon_collision_lib" }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
