[package]
name = "cc_map_controllers"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
gtk = "0.14"
gilrs-core = "0.3"
canon_collision_lib = { path = "../canon_collision_lib" }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
