[package]
name = "package_upgrader"
version = "0.0.1"
license = "MIT"
authors = ["Rukai <rubickent@gmail.com>"]
repository = "https://github.com/rukai/canon_collision"
edition = "2021"
rust-version = "1.56"

[dependencies]
serde_cbor = "0.11"
strum = "0.24"
canon_collision_lib = { path = "../canon_collision_lib" }
